--- a/calendar-todo-app/ui/package.json
+++ b/calendar-todo-app/ui/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.3.1",
     "typescript": "^5.4.2",
